# prometheus

./: .gitignore  Cargo.toml  flake.nix
src/: database.rs  databases.rs  events.rs  main.rs  tasks.rs  utils.rs
src/modules/: mod.rs
src/modules/lorax/: database.rs  mod.rs  task.rs
src/modules/lorax/commands/: admin.rs  events.rs  mod.rs  settings.rs  users.rs
src/modules/modrinth/: commands.rs  database.rs  mod.rs
src/modules/recording/: commands.rs  database.rs  handler.rs  mod.rs
src/modules/stats/: commands.rs  database.rs  mod.rs  task.rs
src/modules/system/: events.rs
src/modules/testing/: commands.rs  database.rs  mod.rs  task.rs
src/modules/utils/: commands.rs  mod.rs
